# Atomas

./: .gitignore  Cargo.toml  README.md  errors.txt
assets/txt/: elements.txt
crates/atomas-core/: Cargo.toml
crates/atomas-core/src/: lib.rs
crates/atomas-core/src/elements/: data.rs  element.rs  id.rs  mod.rs  types.rs
crates/atomas-core/src/ring/: adjmatrix.rs  mod.rs
docker/: Dockerfile
src/: Elements.rs  adjmatrix.rs  cielab.rs  circularlist.rs  color_finder.rs  elements.rs  gamestate.rs  main.rs  parser.rs
tests/: core_tests.rs
