[package]
name = "atomas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[dependencies]
template-matching = { version = "0.2.0", features = ["image"] }
image = "0.25.2"
rand = "0.8.5"
